--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,21 @@
+<form method="post" action="/">
+  <h1>Create a Team and Heroes!</h1>
+  <p>Team Name:<input type="text" name="team[name]"></p><br>
+  <p>Team Motto:<input type="text" name="team[motto]"></p><br>
 
+  <h1>Hero 1</h1>
+  <p>Hero's Name: <input id="member1_name" type="text" name="team[members][][name]"></p><br>
+  <p>Hero's Power: <input id="member1_power" type="text" name="team[members][][power]"></p><br>
+  <p>Hero's Biography: <input id="member1_bio" type="text" name="team[members][][bio]"></p><br>
+
+  <h1>Hero 2</h1>
+  <p>Hero's Name: <input id="member2_name" type="text" name="team[members]][][name]"></p><br>
+  <p>Hero's Power: <input id="member2_power" type="text" name="team[members][][power]"></p><br>
+  <p>Hero's Biography: <input id="member2_bio" type="text" name="team[members][][bio]"></p><br>
+
+  <h1>Hero 3</h1>
+  <p>Hero's Name: <input id="member3_name" type="text" name="team[members][][name]"></p><br>
+  <p>Hero's Power: <input id="member3_power" type="text" name="team[members][][power]"></p><br>
+  <p>Hero's Biography: <input id="member3_bio" type="text" name="team[members][][bio]"></p><br>
+  <button type="submit" id="submit">Submit</button>
+</form>
